--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,16 +5,16 @@ androidGradlePlugin = "8.13.0"
 androidxActivity = "1.11.0"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.9.0"
-androidxComposeBom = "2025.09.00"
-androidxComposeRuntimeTracing = "1.9.1"
+androidxComposeBom = "2025.09.01"
+androidxComposeRuntimeTracing = "1.9.2"
 androidxCore = "1.17.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.1.7"
 androidxEspresso = "3.7.0"
 androidxLifecycle = "2.9.4"
 androidxMacroBenchmark = "1.4.1"
-androidxMetrics = "1.0.0-beta04"
-androidxNavigation = "2.9.4"
+androidxMetrics = "1.0.0-rc01"
+androidxNavigation = "2.9.5"
 androidxProfileinstaller = "1.4.1"
 androidxTestCore = "1.7.0"
 androidxTestExt = "1.3.0"
@@ -23,8 +23,8 @@ androidxTestRunner = "1.7.0"
 androidxTestOrchestrator = "1.3.0"
 androidxTracing = "1.3.0"
 androidxUiAutomator = "2.3.0"
-androidxWindowManager = "1.4.0"
-androidxWork = "2.10.4"
+androidxWindowManager = "1.5.0"
+androidxWork = "2.10.5"
 androidxBiometric = "1.2.0-alpha05"
 androidxAppAuth = "1.0.0"
 coil = "3.3.0"
@@ -47,24 +47,24 @@ turbine = "1.2.1"
 koin = "4.1.1"
 koinAnnotations = "2.1.0"
 material = "1.13.0"
-mockito = "5.19.0"
-mockitoKotlin = "6.0.0"
+mockito = "5.20.0"
+mockitoKotlin = "6.1.0"
 ktor = "3.3.0"
 slf4j = "2.0.17"
 gson = "2.13.2"
-googlePhoneNumber = "9.0.14"
+googlePhoneNumber = "9.0.15"
 zxing = "3.5.3"
-eudiWalletCore = "0.20.0-SNAPSHOT"
+eudiWalletCore = "0.20.0"
 cameraCore = "1.5.0"
-owaspDependencyCheck = "12.1.3"
-material3 = "1.3.2"
+owaspDependencyCheck = "12.1.6"
+material3 = "1.4.0"
 kover = "0.9.2"
 sonar = "6.3.1.5724"
 baselineprofile = "1.4.1"
 timber = "5.0.1"
 treessence = "1.1.2"
 rqesUiSDK = "0.3.2"
-androidxRoom = "2.8.0"
+androidxRoom = "2.8.1"
 cloudy = "0.2.7"
 
 [libraries]
